a1/brendan_gordon/TEST_PROGRAMS/invalidtype/cecily_thomas/assign_float_to_int.min
var x: int;

x = -0.3;
